# ChangeLog for media-video/SDLcam
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/SDLcam/Attic/ChangeLog,v 1.14 2010/03/22 14:23:16 phajdan.jr Exp $

  22 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> SDLcam-0.8.2.ebuild:
  x86 stable wrt bug #309021

  08 Aug 2009; Víctor Ostorga <vostorga@gentoo.org> -SDLcam-0.8.0.ebuild,
  -SDLcam-0.8.1.ebuild:
  Cleaning out old ebuilds

  08 Aug 2009; Víctor Ostorga <vostorga@gentoo.org>
  +files/SDLcam-glibc210.patch, SDLcam-0.7.3-r2.ebuild, SDLcam-0.8.2.ebuild:
  Fixing build against glibc 2.10, bug #279787

*SDLcam-0.8.2 (08 Oct 2007)

  08 Oct 2007; Mike Frysinger <vapier@gentoo.org> +SDLcam-0.8.2.ebuild:
  Version bump.

*SDLcam-0.8.1 (07 Oct 2007)

  07 Oct 2007; Mike Frysinger <vapier@gentoo.org>
  +files/SDLcam-0.8.1-build.patch, +SDLcam-0.8.1.ebuild:
  Version bump and fix libpng linkage #194958 by Leong Seh Hui.

*SDLcam-0.8.0 (06 Oct 2007)

  06 Oct 2007; Mike Frysinger <vapier@gentoo.org>
  +files/SDLcam-0.8.0-build.patch, +SDLcam-0.8.0.ebuild:
  Version bump #188475 by Leong Seh Hui.

  22 Oct 2006; Mike Frysinger <vapier@gentoo.org>
  files/SDLcam-0.7.3-build.patch, +files/SDLcam-0.7.3-jpeg.patch,
  files/SDLcam-0.7.3-prototypes.patch, +files/SDLcam-0.7.3-relax-asm.patch,
  SDLcam-0.7.3-r2.ebuild:
  Cleanup the build system some more and fix asm build errors in mmx code
  #152002 by Thomas Tuttle.

  30 Sep 2006; Mike Frysinger <vapier@gentoo.org>
  +files/SDLcam-0.7.3-build.patch, -files/0.7.3-no-divx.patch,
  files/SDLcam-0.7.3-prototypes.patch, SDLcam-0.7.3-r2.ebuild:
  Fixup more of the build system and fix png error #149540 by Carl Fongheiser.

*SDLcam-0.7.3-r2 (14 Oct 2005)

  14 Oct 2005; Mike Frysinger <vapier@gentoo.org>
  +files/SDLcam-0.7.3-prototypes.patch, +files/SDLcam-0.7.3-tsc.patch,
  +SDLcam-0.7.3-r2.ebuild:
  Add tsc fix by Tobias Klausmann #109161.

*SDLcam-0.7.3-r1 (30 Jan 2004)
