@@ -1,5 +1,5 @@
 AUX SDLcam-glibc210.patch 549 RMD160 e905b36660f569867f98e31fcec79d47f1021e92 SHA1 a9aafac154a6f3979b2882da0d8aa7d62d5e9582 SHA256 28a1a1944dd4056853384143f0fe81dd9ee9956766d521cc9bf3a427ba18a67a
 DIST sdlcam-0.8.2.tar.gz 617089 RMD160 2523840ea3bcd98938c9003c5b38249aba2e2a43 SHA1 6a2caf62d01b92c8a6f76a6dbf908cd7630fea8e SHA256 5acb6bb01615a9f501667117d756d53af1b52e1f3300b0db5ca8061d1fd33216
-EBUILD SDLcam-0.8.2.ebuild 863 RMD160 0742d7493eac3e52d38c8759419446f4dbf16e28 SHA1 9ae04f4a9eb6d6d73e6f220410ceda9b0c3883e0 SHA256 3ec6a23d526d28a630283e5df36b39e275460b4a6b63bcbd817f6572e0ccd9da
-MISC ChangeLog 2464 RMD160 fe5ba3c24f6ad4f2914fb5b2092d9f74d9110160 SHA1 bec0f0dc37b3d4b4def35ee002b8965ef6361d0f SHA256 f40bec4dcdedd9b41b21a1cad733626deb80f797b1e73531ea3cb04e3a9c1880
+EBUILD SDLcam-0.8.2.ebuild 859 RMD160 05f550b065059fc131f2641d6c79eefe264d5707 SHA1 f429e594002b7d1eff75cf0b8083a0795478072f SHA256 efc21488c11140aa5a3f7e6abdf238b35b690288d7412582236f78bf3e0cb562
+MISC ChangeLog 2559 RMD160 49036d35dad788071f734ced87b47debf18ca9ac SHA1 320f4a24275ca91c72557e46dfff555088745eb4 SHA256 e3a45841fbbfb0fe96aca21442a9f6e0940e6f145d71e04780f3a6e75b65a88b
 MISC metadata.xml 515 RMD160 2965fdfa1ece2c3c11fd4eaea345b691248fdee9 SHA1 887d27078d6c4a75a8078f0065cd5d7b7add787f SHA256 e5aab75f654a9654af0670d085e45f5e491bdcb20f18ca3dd92b96bd7d68ebbf
