@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/SDLcam/Attic/SDLcam-0.8.2.ebuild,v 1.3 2010/03/22 14:23:16 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/SDLcam/Attic/SDLcam-0.8.2.ebuild,v 1.4 2011/02/28 17:51:56 ssuominen Exp $
 
 inherit eutils
 
@@ -14,7 +14,7 @@ KEYWORDS="x86"
 IUSE=""
 
 DEPEND="dev-libs/libxml2
-	media-libs/jpeg
+	virtual/jpeg
 	media-libs/libpng
 	media-libs/libfame
 	media-libs/libsdl
