@@ -1,6 +1,9 @@
 # ChangeLog for media-video/SDLcam
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/SDLcam/Attic/ChangeLog,v 1.14 2010/03/22 14:23:16 phajdan.jr Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/SDLcam/Attic/ChangeLog,v 1.15 2011/02/28 17:51:56 ssuominen Exp $
+
+  28 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> SDLcam-0.8.2.ebuild:
+  Use virtual/jpeg.
 
   22 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> SDLcam-0.8.2.ebuild:
   x86 stable wrt bug #309021
